conformance/tests/httproute-rewrite-path-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-path-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prefix/one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /one
  - matches:
    - path:
        type: PathPrefix
        value: /strip-prefix
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
  - matches:
    - path:
        type: PathPrefix
        value: /full/one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /one
